add initial multi-choice menu